--- a/luggage/Info.plist
+++ b/luggage/Info.plist
@@ -44,6 +44,7 @@
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>bluetooth-central</string>
 		<string>location</string>
 	</array>
